# drive-rs

./: .gitignore  .prettierignore  .taplo.toml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  aer.csv  docker-compose.yaml  driver-db-schema.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: check.yml  publish.yml
backend/: Cargo.toml  aer.csv  website_db.json
backend/src/: awesome_embedded_rust.rs  description.rs  driver_db.rs  dumpsterbase.rs  lib.rs  main.rs  website_db.rs
backend/src/driver_db/: boards.rs  categories.rs  manufacturers.rs  packages.rs
backend/src/website_db/: indexes.rs
crate-db/: ad57xx.toml  ina219.toml  lis3dh.toml  lsm303agr.toml  pwm-pca9685.toml
driver-db/: ad57xx.toml  ds1307.toml  ens160.toml  ina219.toml  lis3dh-async.toml  lis3dh.toml  lsm303agr.toml  pwm-pca9685.toml  scd4x.toml  ssd1306.toml  tb6612fng.toml
frontend/: .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  crate-db.ts  vite-env.d.ts
frontend/src/lib/: CategoryFilter.svelte  ColumnSelector.svelte  Crate.svelte  CrateList.svelte  Filter.svelte  ForkMe.svelte  SortFilter.svelte  TextFilter.svelte
frontend/src/store/: FilterStore.svelte  FilterStore.ts
src/: awesome_embedded_rust.rs  description.rs  dumpsterbase.rs  lib.rs  main.rs
src/website_db/: indexes.rs
