[package]
name = "drivers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
db-dump = "0.7.2"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
spdx = "0.10.4"
