[package]
name = "drivers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.55", features = ["derive"] }
csv = "1.4.0"
db-dump = "0.7.14"
schemars = { version = "1.2.0", features = ["chrono04", "semver1", "url2"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
spdx = "0.10.8"
toml = "0.9.11"
url = { version = "2.5.8", features = ["serde"] }
